# YetAnotherMinecraft

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  WorkArounds.txt
Scripts/: copy-shaders.ps1
YetAnotherMinecraft/: CMakeLists.txt  YetAnotherMinecraft.cpp
YetAnotherMinecraft/Core/: Application.cpp  Application.h  Core.h  Log.cpp  Log.h  Time.cpp  Time.h
YetAnotherMinecraft/Core/Camera/: FPSCamera.cpp  FPSCamera.h
YetAnotherMinecraft/Core/Debug/: Debug.cpp  Debug.h
YetAnotherMinecraft/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
YetAnotherMinecraft/Core/Game/Block/: Block.cpp  Block.h  BlockIds.h  StoneBlock.cpp  StoneBlock.h
YetAnotherMinecraft/Core/Game/Chunk/: Chunk.cpp  Chunk.h
YetAnotherMinecraft/Core/Game/GameObject/: GameObject.cpp  GameObject.h
YetAnotherMinecraft/Core/Game/Light/: Light.cpp  Light.h
YetAnotherMinecraft/Core/Rendering/: FrameBuffer.cpp  FrameBuffer.h  FrameRenderer.cpp  FrameRenderer.h  IndexBuffer.cpp  IndexBuffer.h  OpenGLEnums.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferElement.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h
YetAnotherMinecraft/Core/Skybox/: Skybox.cpp  Skybox.h
YetAnotherMinecraft/Core/UI/: ImGuiBuild.cpp  ImGuiUI.cpp  ImGuiUI.h
YetAnotherMinecraft/Core/Utils/: RFloat.h  RVec.h
YetAnotherMinecraft/Core/Window/: Window.cpp  Window.h
YetAnotherMinecraft/Shaders/: Basic.vert  block.frag  block.vert  chunk.frag  chunk.vert  skybox.vert
YetAnotherMinecraft/Shaders/BasicProjection/: Basic.frag  Basic.vert
lib/stb_image/: CMakeLists.txt
